fixed smartphone too wide

--- a/style.css
+++ b/style.css
@@ -43,18 +43,23 @@ html {
 
   
 .container {
+    display:flex;
+    min-width: 0;
+    flex-shrink: 1;
+    box-sizing: border-box;
     border: 5px solid transparent;
     /* padding: 1rem; */
-    box-sizing: border-box;
-    display:flex;
     align-items:center;
     font-weight:bold;
 }
 
 .container img {
     display: flex;
+    min-width: 0;
     flex-shrink: 1;
-    width: 15rem;
+    width: 100%;
+    max-width: 15rem;
+    height: auto;
     margin-top:1rem;
 }
 
